# selenium-live-youtube-scraping

./: README.md  pyproject.toml  scraper.py  scratch.py  trending.html
